@@ -2,6 +2,7 @@
 
 import unittest
 from datetime import datetime
+from time import strptime
 from test import test_support
 
 
@@ -12,6 +13,14 @@ class ParsingTests(unittest.TestCase):
         self.assertEqual(now, datetime.strptime(now.isoformat('T'), "%Y-%m-%dT%H:%M:%S"))
         # tests bug 1662
         self.assertEqual(now, datetime.strptime(now.isoformat('T') + 'Z', "%Y-%m-%dT%H:%M:%SZ"))
+
+    def test_IllegalArgument_to_ValueError(self):
+        with self.assertRaises(ValueError):
+            d = strptime('', '%e')
+
+    def test_issue1964(self):
+        d = strptime('0', '%f')
+        self.assertEqual(0, d[1])
 
 def test_main():
     test_support.run_unittest(
